--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(run01 day01.cpp)
 add_executable(run02 day02.cpp)
 add_executable(run03 day03.cpp)
 add_executable(run04 day04.cpp)
+add_executable(run05 day05.cpp)
