--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(run04 day04.cpp)
 add_executable(run05 day05.cpp)
 add_executable(run06 day06.cpp)
 add_executable(run07 day07.cpp)
+add_executable(run08 day08.cpp)
